[gd_scene load_steps=4 format=3 uid="uid://dyq5kjhnqocfg"]

[ext_resource type="Script" path="res://scripts/final_results_info.gd" id="1_h23vx"]
[ext_resource type="Texture2D" uid="uid://dcqtwsgmouctb" path="res://assets/images/followeicon.png" id="2_pk08p"]
[ext_resource type="Texture2D" uid="uid://bnb0aw6pbiouu" path="res://assets/images/moneyicon.png" id="3_n4niq"]

[node name="FinalResultsInfo" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)
script = ExtResource("1_h23vx")

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -264.0
offset_right = 300.0
offset_bottom = -232.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Tiempo"

[node name="FollowersLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.0
offset_top = -116.0
offset_right = 304.0
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Followers"

[node name="MoneyLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = 58.0
offset_right = 312.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Money"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -227.0
offset_top = -176.0
offset_right = -77.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_pk08p")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = -9.0
offset_right = -76.0
offset_bottom = 141.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_n4niq")
expand_mode = 2
